[project]
name = "workout-weight-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair[all]>=5.5.0",
    "marimo>=0.14.13",
    "polars>=1.31.0",
    "tinydb>=4.8.2",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "ruff>=0.12.7"]
